<resources>
    <string name="app_name">Cooking</string>

    <string name="recipe_name">recipe name</string>
    <string name="number">1.</string>
    <string name="title_step">Recipe Introduction</string>
    <string name="ingredients">Ingredients</string>
    <string name="steps">Steps</string>
    <string name="quantity">226</string>
    <string name="measure">G</string>
    <string name="ingredient">Bittersweet chocolate (60-70% cacao)</string>
    <string name="description_step">2. Whisk the graham cracker crumbs, 50 grams (1/4 cup) of sugar,
        and 1/2 teaspoon of salt together in a medium bowl. Pour the melted butter and 1 teaspoon of vanilla into the dry ingredients and stir together until evenly mixed.</string>
</resources>
