<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.activities.DetailRecipeActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            app:cardElevation="3dp"
            app:cardCornerRadius="3dp">

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <ImageView
                    android:id="@+id/img_recipe_detail"
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:scaleType="centerCrop"/>

                <TextView
                    android:id="@+id/tv_name_recipe_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorAccent"
                    android:layout_gravity="bottom|end"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    tools:text="@string/recipe_name" />
            </FrameLayout>
        </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/tv_title_ingredients"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ingredients"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorPrimaryDark"
            android:layout_below="@id/card_view"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_ingredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_title_ingredients"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"/>

        <TextView
            android:id="@+id/tv_title_steps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/steps"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorPrimaryDark"
            android:layout_below="@id/rv_ingredients"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_steps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_title_steps"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>

    </RelativeLayout>

</ScrollView>